fixing handling of valhalla residents